--- a/calculator/index.html
+++ b/calculator/index.html
@@ -10,38 +10,42 @@
 
 <body>
     <div class="kalkulator">
-        <div class="pamiec"></div>
-        <div class="aktualne"></div>
+        <div class="wynik">
+            <div class="pamiec"></div>
+            <div class="aktualne"></div>
+        </div>
         <button class="operator">sin</button>
         <button class="operator">cos</button>
         <button class="operator">tg</button>
         <button class="operator">ctg</button>
-        <button class="operator">x²</button>
-        <button class="wyczysc">AC</button>
+        <button class="operator">÷</button>
+
+        <button class="wyczysc span-col">AC</button>
         <button class="del">DEL</button>
         <button class="operator">√</button>
-        <button class="operator">%</button>
-        <button class="operator">÷</button>
-        <button class="operator">^</button>
+        <button class="operator">&times</button>
+
         <button class="liczba">7</button>
         <button class="liczba">8</button>
         <button class="liczba">9</button>
-        <button class="operator">&times</button>
-        <button class="operator">π</button>
+        <button class="operator">^</button>
+        <button class="operator">-</button>
+
         <button class="liczba">4</button>
         <button class="liczba">5</button>
         <button class="liczba">6</button>
-        <button class="operator">-</button>
-        <button class="operator">log</button>
+        <button class="operator">x²</button>
+        <button class="operator span-row">+</button>
+
         <button class="liczba">1</button>
         <button class="liczba">2</button>
         <button class="liczba">3</button>
-        <button class="operator">+</button>
-        <button class="operator">ln</button>
+        <button class="operator">log</button>
+
         <button class="liczba">+/-</button>
         <button class="liczba">0</button>
         <button class="liczba">,</button>
-        <button class="rownosc">=</button>
+        <button class="rownosc span-col">=</button>
     </div>
     <script src="main.js"></script>
 </body>
